<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <TextView
        android:id="@+id/loginTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="156dp"
        android:text="@string/loginTitle"
        android:textColor="@color/btnGreen"
        android:textSize="40dp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameTxt"
        android:layout_width="183dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitleTxt" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/input_box"
        android:drawableRight="@drawable/ic_username"
        android:ems="10"
        android:padding="10dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTxt"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/PasswordTxt"
        android:layout_width="183dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/passwaord"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/input_box"
        android:drawableRight="@drawable/ic_password"
        android:ems="10"
        android:padding="10dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordTxt"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="143dp"
        android:layout_height="55dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_back"
        android:text="@string/loginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <ImageView
        android:id="@+id/upperDesign"
        android:layout_width="435dp"
        android:layout_height="247dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upper_design" />

    <ImageView
        android:id="@+id/lowerDesign"
        android:layout_width="418dp"
        android:layout_height="244dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/lower_design" />

</androidx.constraintlayout.widget.ConstraintLayout>